--- a/packages.bib
+++ b/packages.bib
@@ -15,6 +15,14 @@
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 
+@Manual{R-emojifont,
+  title = {emojifont: Emoji and Font Awesome in Graphics},
+  author = {Guangchuang Yu},
+  year = {2021},
+  note = {R package version 0.5.5},
+  url = {https://github.com/GuangchuangYu/emojifont},
+}
+
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
