--- a/pathway-basics.Rmd
+++ b/pathway-basics.Rmd
@@ -1,7 +1,33 @@
+
+```{r, include=FALSE}
+#Load necessary libraries
+library(emojifont)
+library(knitr)
+```
+
 # Pathway basics
 
-Some _significant_ applications are demonstrated in this chapter.
+## Ten simple rules
 
-## Example one
+The [Ten simple rules for creating reusable pathway models for computational analysis and visualization](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1009226) (Hanspers et al., 2021) paper provides guidelines for creating pathway models.    
 
-## Example two
+> A pathway model is defined here as a set of interactions among biological entities (e.g., proteins and metabolites) relevant to a particular context, curated and organized to illustrate a particular process.
+
+## Looking for inspiration? 
+
+You can browse examples of pathway models at [WikiPathways]("https://www.wikipathways.org/index.php/Special:BrowsePathways") `r emoji("eyeglasses")` 
+
+```{r, include-url, out.width='100%', dev='png', cache=TRUE, screenshot.opts=list(vwidth=992), echo=FALSE}
+# example pathways on wikipathways 
+knitr::include_url("https://www.wikipathways.org/index.php/Special:BrowsePathways")
+```
+
+## `r emoji("memo")` Citation {-}
+
+Hanspers K, Kutmon M, Coort SL, Digles D, Dupuis LJ, Ehrhart F, Hu F, Lopes EN, Martens M, Pham N, Shin W, Slenter DN, Waagmeester A, Willighagen EL, Winckers LA, Evelo CT, Pico AR. Ten simple rules for creating reusable pathway models for computational analysis and visualization. PLoS Comput Biol. 2021 Aug 19;17(8):e1009226. doi: [10.1371/journal.pcbi.1009226](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1009226). PMID: [34411100](https://pubmed.ncbi.nlm.nih.gov/34411100/); PMCID: [PMC8375987](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8375987/).
+
+## `r emoji("globe_with_meridians")` Resources for Pathway Authors
+
+- WikiPathways [Resources for Pathway Authors and Curators](https://www.wikipathways.org/index.php/Help:Authors) 
+- 
+- ...
