--- a/drawing-pathway.Rmd
+++ b/drawing-pathway.Rmd
@@ -1,7 +1,19 @@
+
+```{r, include=FALSE}
+#Load necessary libraries
+library(emojifont)
+library(knitr)
+```
+
 # Drawing a pathway model
 
-Some _significant_ applications are demonstrated in this chapter.
+## WikiPathways Academy 
 
-## Example one
+Follow the [WikiPathways Academy](https://new.wikipathways.org/academy/path.html) to learn how to draw a pathway model!
 
-## Example two
+```{r, include-url, out.width='100%', dev='png', cache=TRUE, screenshot.opts=list(vwidth=992), echo=FALSE}
+# example pathways on wikipathways 
+knitr::include_url("https://new.wikipathways.org/academy/path.html")
+```
+
+## Drawing on PathVisio
