--- a/sharing-pathway.Rmd
+++ b/sharing-pathway.Rmd
@@ -1,7 +1,23 @@
+
+```{r, include=FALSE}
+#Load necessary libraries
+library(emojifont)
+library(knitr)
+```
+
 # Sharing a pathway model
 
-Some _significant_ applications are demonstrated in this chapter.
+Share your pathway models on WikiPathways!
 
-## Example one
+### Notice
+We are currently moving to a new WikiPathways site
 
-## Example two
+new: [https://new.wikipathways.org](https://new.wikipathways.org)
+current: [https://www.wikipathways.org](https://www.wikipathways.org/index.php/WikiPathways). 
+
+```{r, include-url, out.width='100%', dev='png', cache=TRUE, screenshot.opts=list(vwidth=992), echo=FALSE}
+# example pathways on wikipathways 
+knitr::include_url("https://new.wikipathways.org")
+```
+
+
