--- a/datanodes.Rmd
+++ b/datanodes.Rmd
@@ -1,7 +1,24 @@
 # Data Nodes
 
-Some _significant_ applications are demonstrated in this chapter.
 
-## Example one
+## Data node types
 
-## Example two
+### Molecular 
+
+* GeneProduct
+* DNA
+* RNA
+* Protein
+* Complex
+* Metabolite
+
+### Concept
+
+* Pathway
+* Disease
+* Phenotype
+* Alias
+* Event 
+
+#### Alias
+
