--- a/index.Rmd
+++ b/index.Rmd
@@ -18,7 +18,7 @@ always_allow_html: yes
 #Install required packages
 install.packages("bookdown")
 install.packages("emojifont")
-
+install.packages('knitr')
 # or the development version
 # devtools::install_github("rstudio/bookdown")
 ```
