--- a/make-it-pretty.Rmd
+++ b/make-it-pretty.Rmd
@@ -3,8 +3,72 @@
 #Load necessary libraries
 library(emojifont)
 library(knitr)
+library(gifski)
 ```
 
 # Make it pretty 
 
 In this section we describe some of the options for customizing the visuals or graphics of your pathway model. 
+
+Pathway elements can be visually customized in a variety of ways!
+
+
+```{r fig.align="center", echo=FALSE}
+knitr::include_graphics("images/screenshots/colors.png")
+```
+
+## Editable properties
+
+
+### Data nodes, States, Labels, Shapes
+Text
+
+* Text Color
+* Font Name
+* Font Size
+* Bold, Italic, Underline, Strikethrough
+
+Shape 
+
+* Shape type: see Shapes section
+* Border Color
+* Border Style: Solid, Dashed, Double
+* Border Width: the thickness of the border
+* Fill Color
+
+```{r fig.align="center", echo=FALSE, fig.cap = "Properties tab when editing a shaped pathway element"}
+knitr::include_graphics("images/screenshots/shape-properties.png")
+```
+
+### Interactions, Graphical Lines
+* Line Color 
+* Line Style: Solid, Dashed, Double
+* Line Width: the thickness of the line
+* Connector Type: Straight, Curved, Elbowed, Segmented
+
+
+```{r fig.align="center", echo=FALSE, fig.cap = "Properties tab when editing a line pathway element"}
+knitr::include_graphics("images/screenshots/line-properties.png")
+```
+
+### Groups 
+Text
+
+* Text Color
+* Font Name
+* Font Size
+* Bold, Italic, Underline, Strikethrough
+
+* Note: groups have default color and shape depending on group type (see Groups section)
+```{r fig.align="center", echo=FALSE, fig.cap = "Group types"}
+knitr::include_graphics("images/screenshots/group-types.png")
+```
+
+## Background color 
+
+In general, a plain white background is recommended for pathway models. 
+
+If desired, background color can be changed by 
+1. Clicking on the Title/Organism information box in the upper left corner. 
+2. Then in Properties Tab, click on Background Color.
+
