--- a/labels.Rmd
+++ b/labels.Rmd
@@ -1,3 +1,7 @@
 # Labels
 
-Labels
+A label is a text field which can be used to annotate any aspect of a pathway.
+
+## When to add a Label: Label vs. Text label
+
+It is recommended to label 
