--- a/states.Rmd
+++ b/states.Rmd
@@ -1,12 +1,24 @@
 # States
 
 
-## What is a State? 
+## What is a state? 
+
+A state represents a specific state of the biological entity (e.g. phosphorylation, genetic variants, etc). A state is linked to a data node.
+
+## Creating or Adding a state 
+A state must be added to an existing DataNode. To create a state, right click on the DataNode and select > Add State...
+
+To remove a state, click on the state and delete as normal. 
+
+Please note that there are several [State types](#state-types) which you may add to a DataNode. 
+
+![](images/gifs/add-remove-state.gif){width=100%}
 
 
 ## State types 
 
-### Undefined
 ### Protein Modification
 ### Genetic Variant
 ### Epigenetic Modification
+### Undefined
+
