--- a/pathway-element-info.Rmd
+++ b/pathway-element-info.Rmd
@@ -1,3 +1,9 @@
+
+```{r, include=FALSE}
+#Load necessary libraries
+library(knitr)
+```
+
 # Pathway element information
 
 ## Database and Identifier
