--- a/shapes.Rmd
+++ b/shapes.Rmd
@@ -2,4 +2,14 @@
 
 A shape is a visual annotation or graphical element.
 
-## New Shapes! 
+## Basic Shapes
+
+
+## Line Shapes
+
+
+## Cellular Compartments
+
+
+## Miscellaneous Shapes
+
