--- a/aliases.Rmd
+++ b/aliases.Rmd
@@ -5,14 +5,17 @@ library(knitr)
 ```
 
 # Aliases
-
 An Alias is a special [type of Data Node](datanodes.md#concept-datanodes) which can represent a [Group](groups.md) pathway element (or other entity). An Alias Data Node can be linked to an existing Group.
 
 ## Adding an Alias
 Alias Data Nodes can be [added from an existing Group](#adding-and-deleting-an-alias-from-a-group) (linked) or [using the Objects Panel](#linking-and-unlinking-an-alias-to-a-group) (link later). 
 
 ## Adding and Deleting an Alias from a Group 
-To add an Alias for an existing Group, right-click on the Group and select "Add Alias...". The new Alias Data Node will be linked to this Group.  
+### To Add an Alias for an existing Group:
+1. Right-click on the Group and select "Add Alias...". The new Alias Data Node will be linked to this Group.  
+
+### To Remove an Alias:
+1. To remove an Alias, click on the Alias and delete as normal.
 
 ![](images/gifs/add-delete-alias.gif){width=100%}
 
@@ -20,15 +23,11 @@ To add an Alias for an existing Group, right-click on the Group and select "Add 
 
 Use the Objects Panel to add a DataNode of type Alias. 
 
-To link an Alias Data Node to a Group: 
-
+### To Link an Alias Data Node to a Group:
 1. Right-click and select "Link to Group..." 
 2. Click on to select the Group you wish to link the Alias DataNode
 
-<br/>
-
-To unlink an Alias Data Node from the Group it is currently linked to:
-
+### To Unlink an Alias Data Node from the referenced Group:
 1. Right-click and select "Unlink from Group..."
 
 ![](images/gifs/link-unlink-alias.gif){width=100%}
@@ -38,18 +37,18 @@ To unlink an Alias Data Node from the Group it is currently linked to:
 An Alias Data Node can be copied and pasted.
 
 ### With linked Group
-If both an Alias Data Node and the Group it is linked to are copied, the new Alias Data Node will be linked to the new Group. 
+If both an Alias Data Node and the Group it is linked to are copied, the *new* Alias Data Node will be linked to the *new* Group. 
 
 ![](images/gifs/copy-alias-group.gif){width=100%}
 
 ### Without linked Group
 
-If an Alias Data Node is unlinked OR the Alias Data Node is linked to a Group but only the Alias DataNode is copied, the new Alias Data Node will not be linked to any Group. 
-
 ```{r fig.align="center", echo=FALSE, fig.cap = "Warning message when copying an Alias (unlinked or copied without group)"}
 #TCA Cycle Pathway
 knitr::include_graphics("images/screenshots/copy-alias-warning.png")
 ```
+
+If an Alias Data Node is unlinked OR the Alias Data Node is linked to a Group but only the Alias DataNode is copied, the *new* Alias Data Node *will not be linked to any Group*. 
 
 ![](images/gifs/copy-only-alias.gif){width=100%}
 
